Fix dark mode for amoriax, castlecombo, challengers, massiveverse, moversandshakers, trickarus

--- a/src/css/games/castlecombo.less
+++ b/src/css/games/castlecombo.less
@@ -14,7 +14,7 @@ html[data-theme=dark] {
 	}
 
 	#popin_bgaHelpDialog .block {
-		background: var(--dark-20);
+		background: var(--dark-30);
 	}
 
 	.bga-help_popin-button {
@@ -28,5 +28,20 @@ html[data-theme=dark] {
 	#notice {
 		background: var(--dark-20);
 		color: var(--light-80);
+	}
+
+	.bga-cards_deck-counter.round {
+		background: var(--dark-10);
+		box-shadow: 0 0 2px 1px var(--light-80);
+		color: var(--light-80);
+	}
+
+	#popin_bgaHelpDialog .red {
+		color: var(--red-80);
+	}
+
+	.card .card-sides .card-side,
+	#messenger {
+		filter: var(--ext-bright);
 	}
 }
